# zen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Board.cmake  FindSTM32Cube.cmake  FindSeggerRTT.cmake  Platform.cmake  Toolchain.cmake
cmake/board/: black_delay.cmake  plugin.cmake  simulator.cmake
cmake/platform/: native.cmake  stm32.cmake
cmake/toolchain/: armgcc.cmake  native.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/black-delay/: CMakeLists.txt  main.cpp  stm32f4xx_it.c
src/app/sim/: CMakeLists.txt
src/app/zen_mk2/: App.cpp  App.h  AppWrapper.h  CmakeLists.txt  JuceApp.cpp  JuceApp.hpp  UIComponent.cpp  UIComponent.hpp
src/modules/: AudioInstance.h  CMakeLists.txt
src/modules/blocks/: CMakeLists.txt  delay.h  zen_modulation.h
src/modules/dsp/: DelayInterpolator.h  Interpolator.h
src/modules/ui/: CMakeLists.txt  SpectrumAnalyzer.h
src/modules/utils/: CmakeLists.txt  assert.c  assert.h  debug.h
